Fix for mobile devices not showing filter label inside filter when select2 / chosen JS are not loaded

--- a/site/assets/less/flexi_shared.less
+++ b/site/assets/less/flexi_shared.less
@@ -1499,8 +1499,8 @@ table.fc-form-tbl td.data {
 	display: block;
 	z-index: 1001;
 	position: fixed;
-	top: 200px;
-	left: 40%;
+	top: 40%;
+	left: 200px;
 	color: black;
 	background: white 30px 40px no-repeat;
 	opacity: 1;
